[metadata]
name = django-health-check-version
version = 1.0.0
author = Steve Schwarz
author_email = steve@agilitynerd.com
description = Display settings.py VERSION in django-health-check output
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/saschwarz/django-health-check-version
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.7
include_package_data = True